# Telegram-for-something-bot

./: .dockerignore  .env.example  .flake8  Makefile  README.md  alembic.ini  bot.Dockerfile  bot.entrypoint.sh  docker-compose.db.yaml  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: formatter_the_code.yml  lint_and_fornatter_the_code.yml  linter.yml  pylint.yml
migrations/: env.py
migrations/versions/: 455c7450badc_.py
ptb/: config.py  database.py  keyboards.py  main.py  models.py
